Hopefully fix blog white space when columns have different heights

--- a/assets/stylesheets/partials/_sections.scss
+++ b/assets/stylesheets/partials/_sections.scss
@@ -290,7 +290,7 @@
   .section-blog-row {
     .columns {
       display: block;
-      min-height: 42rem;
+      min-height: 350px;
     }
   }
 
